--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ html {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    
+
 }
 
 *,
@@ -10,4 +12,58 @@ html {
     -webkit-box-sizing: inherit;
     -moz-box-sizing: inherit;
     box-sizing: inherit;
+    font-family:"lucida grande",
+    "lucida sans unicode",
+    lucida,
+    helvetica,
+    "Hiragino Sans GB",
+    "Microsoft YaHei",
+    "WenQuanYi Micro Hei",
+    sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.tales {
+    width: 100%;
+}
+
+.carousel-inner {
+    width: 100%;
+    max-height: 600px !important;
+}
+
+.navbar {
+    opacity: 0.95;
+}
+
+#intro{
+    padding: 4rem;
+    color: #38434C;
+    font-size: 1.2rem;
+}
+
+.aboutImg img{
+    width:100%;
+}
+
+.aboutText {
+    padding-top: 3.5rem;
+    color: white;
+}
+
+.schedule img{
+    height: 100%
+}
+
+.collapse img{
+    height: 100%
+}
+
+#styles{
+    background-color: #38434C;
+}
+
+.btn{
+    color: grey;
 }
