--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ html {
     sans-serif;
     margin: 0;
     padding: 0;
+    border: 0;
 }
 
 .tales {
@@ -30,7 +31,8 @@ html {
 
 .carousel-inner {
     width: 100%;
-    max-height: 600px !important;
+    max-height: 530px !important;
+    padding-top: 3.5rem;
 }
 
 .navbar {
@@ -38,9 +40,14 @@ html {
 }
 
 #intro{
-    padding: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 0.5rem;
     color: #38434C;
     font-size: 1.2rem;
+}
+
+#about{
+   padding-top: 3.5rem;
 }
 
 .aboutImg img{
@@ -52,18 +59,218 @@ html {
     color: white;
 }
 
+#schedule{
+}
+
 .schedule img{
     height: 100%
 }
 
 .collapse img{
-    height: 100%
 }
 
-#styles{
+.styles-title {
+    background-color: #38434C;
+    
+}
+
+#styles h1 {
+    color: white;
+}
+
+.btn-link {
+    color: #38434C !important;
+}
+
+.card-text {
+    text-align: justify;
+    padding-left: 5rem;
+    padding-right:5rem;
+    color: #38434C;
+}
+.card-img{
+    text-align: center;
+}
+
+.card-header{
+    background-color: white !important;
+}
+
+.card {
+    margin: 1.3rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    
+}
+
+#accordion .card {
+    border: none;
+}
+
+.crew-container{
+    padding-bottom: 3rem;
+}
+
+.instructor {
+    position: relative;
+    width: 50%;
+}
+
+.instr-img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.instr-middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)
+}
+
+.instructor:hover .instr-img {
+    opacity: 0.3;
+}
+
+.instructor:hover .instr-middle {
+    opacity: 1;
+}
+
+.instr-text {
+    background-color: #38434C;
+    color: white;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
+}
+
+.shows-title {
+    background-color: #38434C;
+   
+}
+
+#shows h1 {
+    color: white;
+}
+
+.mySlides {
+    display: none;
+    
+}
+
+.show-slides img{
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.shows-container{
+    padding: 0rem;
+    margin-top: 5rem;
+}
+
+.shows-list{
+    list-style: none;
+    color: #38434C;
+}
+
+.contact h6{
+    color: #38434C;
+    margin-top: 2.8rem;
+    margin-bottom: 2.8rem;
+}
+
+.contact p{
+    color: #38434C;
+}
+
+.contact img {
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.wechat{
+    
+}
+
+.tictok{
+
+}
+
+#footer {
     background-color: #38434C;
 }
 
-.btn{
-    color: grey;
+#footer p {
+    color: white;
+    font-size: 0.8rem;
+    margin: 0;
 }
