--- a/css/style.css
+++ b/css/style.css
@@ -258,11 +258,18 @@ html {
 }
 
 .wechat{
-    
+
 }
 
 .tictok{
 
+}
+
+#allmap {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: "微软雅黑";
 }
 
 #footer {
